# incubator-systemml

./: pom.xml  python-reference.md
conf/: SystemML-config.xml.template
dev/release/: uploadToPyPI.sh
docs/: algorithms-classification.md  beginners-guide-caffe2dml.md  beginners-guide-keras2dml.md  beginners-guide-python.md  blas.md  dml-language-reference.md  gpu.md  index.md  native-backend.md  python-reference.md  release-process.md  troubleshooting-guide.md
docs/devdocs/: DeepLearning.md  GPU_backend.md  native.md
samples/caffe/: Lenet.proto  LenetSolver.proto
scripts/nn/layers/: affine.dml  batch_norm2d.dml  low_rank_affine.dml  lstm.dml  lstm_staging.dml  zero_pad2d.dml
scripts/nn/optim/: sgd_nesterov.dml
scripts/nn/test/: grad_check.dml  run_tests.dml  test.dml
scripts/nn/test/compare_backends/: compare_frameworks.py  compare_frameworks.sh
scripts/perftest/: runMatMultExperiments.sh
scripts/perftest/deep_learning/: run.sh  test_conv2d.dml  test_tf_conv2d.py
src/assembly/: extra.xml
src/assembly/distrib/: LICENSE
src/assembly/inmemory/: LICENSE
src/assembly/jar/: LICENSE
src/assembly/standalone-jar/: LICENSE
src/main/cpp/: CMakeLists.txt  README.md  SystemML.cpp  SystemML.h  build.md  compile-lib-linux-x86_64.sh  libmatrixdnn.cpp  libmatrixdnn.h  libmatrixmult.cpp  libmatrixmult.h  systemml.cpp  systemml.h
src/main/cpp/kernels/: .gitignore  SystemML.cu  SystemML.ptx
src/main/cpp/lib/: libpreload_systemml-apple-x86_64.dylib  libsystemml_mkl-apple-x86_64.dylib  libsystemml_openblas-apple-x86_64.dylib
src/main/cpp/preload/: preload_systemml.cpp
src/main/java/caffe/: Caffe.java
src/main/java/org/apache/sysml/api/: DMLScript.java  ExperimentDispatcher.java  MLContext.java  ScriptExecutorUtils.java
src/main/java/org/apache/sysml/api/cpp/: CMakeLists.txt  SystemML.cpp  SystemML.h
src/main/java/org/apache/sysml/conf/: ConfigurationManager.java  DMLConfig.java
src/main/java/org/apache/sysml/hops/: AggBinaryOp.java  AggUnaryOp.java  BinaryOp.java  ConvolutionOp.java  DataGenOp.java  DnnOp.java  FunctionOp.java  Hop.java  IndexingOp.java  ReorgOp.java  UnaryOp.java
src/main/java/org/apache/sysml/lops/: Binary.java  ConvolutionTransform.java  DnnTransform.java  FunctionCallCP.java  Lop.java
src/main/java/org/apache/sysml/parser/: BuiltinFunctionExpression.java  DMLTranslator.java  DataExpression.java  Expression.java  ExpressionList.java  ParserWrapper.java  RelationalExpression.java
src/main/java/org/apache/sysml/runtime/: GPUInstructionParser.java
src/main/java/org/apache/sysml/utils/: BuildNativeLibrary.java  GPUStatistics.java  InstallDependencyForIntegrationTests.java  NativeHelper.java  PersistentLRUCache.java  Statistics.java
src/main/python/: LICENSE  MANIFEST.in  post_setup.py  pre_setup.py  setup.py
src/main/python/systemml/: classloader.py  converters.py  defmatrix.py  mlcontext.py
src/main/python/systemml/mllearn/: estimators.py  keras2caffe.py
src/main/python/tests/: test_matrix_agg_fn.py  test_matrix_binary_op.py  test_mlcontext.py  test_mllearn_df.py  test_mllearn_numpy.py  test_nn_numpy.py
src/main/scala/org/apache/sysml/api/: Py4JCallbackImpl.scala  (+1 more)
src/test/scripts/functions/parfor/: for_iterator1.dml
src/test/scripts/functions/tensor/: Conv2DBackwardDataTest.dml  Conv2DBackwardTest.dml  Conv2DTest.R  Conv2DTest.dml  Pool2DBackwardTest.dml  Pool2DTest.dml  PoolBackwardTest.dml  PoolTest.dml  RightIndexingMatrixTest.dml  Tensor.md
(+477 files in other folders)
